--- a/assets/css/contac.css
+++ b/assets/css/contac.css
@@ -86,3 +86,13 @@
         height: 40dvh;
     }
 }
+@media screen and (max-width:395px){
+    .contact{
+        height: 86dvh;
+    }
+    .form{
+        padding: 2rem;
+        max-width: 90%;
+        height: 60dvh;
+    }
+}
