--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -51,3 +51,12 @@
     font-size: 4rem;
     transition: var(--transition);
 }
+
+@media screen and (max-width:395px){
+    .footer__container--links{
+        display: none;
+    }
+    .footer{
+        height: 10dvh;
+    }
+}
