--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -7,7 +7,7 @@
     height: 100vh;
     flex-wrap: wrap;
     padding: 3rem;
-    background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../assets/images/programmer_about.jpeg");
+    background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../images/programmer_about.jpeg");
 }
 
 .about__container {
@@ -52,7 +52,7 @@
 }
 
 .about__media {
-    background-image: url("../assets/images/blob.svg");
+    background-image: url("../images/blob.svg");
     width: 40%;
     background-repeat: no-repeat;
     background-position: center;
