--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -1,16 +1,15 @@
 @import url("style.css");
-
+@import url("animation.css");
 .skills {
-    padding-top: 2rem;
-    text-align: center;
-    justify-content: center;
+    position: relative;
     display: flex;
+    width: 100%;
+    height: auto;
+    align-items: center;
+    justify-content: flex-start;
     flex-direction: column;
-    height: 60vh;
-    background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../assets/images/mundo.jpeg");
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    padding: 17rem 0;
+    background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../images/mundo.jpeg");
 }
 
 .skills__title {
@@ -21,26 +20,48 @@
 }
 
 .skills__container {
+    padding-top: 3rem;
+    align-self: center;
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    width: 100%;
+    justify-content: center;
     flex-wrap: wrap;
-    margin-top: 5rem;
+    gap: 38px;
 }
 
 .card {
+    height: 190px;
+    width: 140px;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    background-color: var(--primary-color);
-    padding: 1rem;
+    flex-direction: column;
     justify-content: space-evenly;
-    border-radius: var(--border-radius);
+    border-radius: 13px;
+    pad: 2rem 3rem;
+    background-color: #9500ff67;
+    z-index: 5;
+    backdrop-filter: blur(1px);
+    border: 1px solid rgba(0, 255, 255, 0.13);
 }
 
+.card:hover {
+    border: 3px solid rgba(57, 1, 112, 0.69);
+    background-color: rgba(111, 0, 255, 0.13);
+}
+
+.card:hover>.card__icon {
+    animation: flotating__icon 3s ease infinite 0.4s;
+    font-size: 9rem;
+    transition: transition;
+}
+.card:hover>.card__description{
+    font-size: 2rem;
+    color: var(--second-color);
+    transition: transition;
+}
 .card__icon {
     font-size: 7rem;
-    
+
 }
 
 .card__description {
@@ -55,7 +76,8 @@
         height: auto;
         padding: 2rem 1rem;
     }
-    .skills__container{
+
+    .skills__container {
         display: flex;
         justify-content: space-evenly;
         align-items: center;
@@ -69,6 +91,6 @@
 
     .card {
         border-radius: var(--border-radius);
-        
+
     }
 }
