--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -23,10 +23,10 @@
     padding-top: 3rem;
     align-self: center;
     display: flex;
-    width: 100%;
-    justify-content: center;
-    flex-wrap: wrap;
+    width: calc(140px * 9 + 38px * 9); /* Ajusta el valor según el número de tarjetas y el gap */
+    overflow: hidden;
     gap: 38px;
+    animation: scroll 30s linear infinite;
 }
 
 .card {
@@ -37,12 +37,22 @@
     flex-direction: column;
     justify-content: space-evenly;
     border-radius: 13px;
-    pad: 2rem 3rem;
+    padding: 2rem 3rem;
     background-color: #9500ff67;
     z-index: 5;
     backdrop-filter: blur(1px);
     border: 1px solid rgba(0, 255, 255, 0.13);
 }
+
+@keyframes scroll {
+    0% {
+        transform: translateX(0);
+    }
+    100% {
+        transform: translateX(calc(-140px * 9 - 38px * 9));
+    }
+}
+
 
 .card:hover {
     border: 3px solid rgba(57, 1, 112, 0.69);
