--- a/assets/css/skills.css
+++ b/assets/css/skills.css
@@ -93,6 +93,9 @@
         align-items: center;
         flex-wrap: wrap;
         margin-top: 4rem;
+        animation: none;
+        flex-direction: row;
+        width: 100%;
     }
 
     .card__icon {
@@ -103,4 +106,5 @@
         border-radius: var(--border-radius);
 
     }
+    
 }
