--- a/assets/css/portafolio.css
+++ b/assets/css/portafolio.css
@@ -50,6 +50,30 @@
     text-align: center;
 }
 
+.btn__data{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    padding: 20px;
+    gap: 10px;
+}
+
+.data__caja{
+    background: #dddada;
+    border: none;
+    width: 6rem;
+    height: 4rem;
+    border-radius: 15%;
+}
+
+.data__icon{
+    font-size: 2.5rem;
+
+}
+
+.active__filter{
+    border: 2.5px solid var(--second-color);
+}
 .img__container {
     width: 33rem;
     overflow: hidden;
@@ -119,7 +143,13 @@
 .iconify__icon{
     font-size: 1.6rem;
 }
-
+.btn__caja{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    gap: 1.5rem;
+    padding-top: 2rem;
+}
 @media screen and (max-width:768px){
     .portafolio{
         padding-top: 2rem ;
