--- a/assets/css/academic.css
+++ b/assets/css/academic.css
@@ -1,4 +1,4 @@
-@import url("style.css");
+@import url("./style.css");
 
 section.academic {
     padding: 30px;
@@ -10,9 +10,23 @@ section.academic {
     padding: 0% 15% 0% 15%;
     display: flex;
     justify-content: space-around;
+    gap: 30px;
+}
+
+.academic__title{
+    font-family: "Press Start 2P", system-ui;
+    font-size: 2rem;
+    padding-top: 2rem;
 }
 
 .academic__courses__list img {
     width: auto;
     height: 130px;
+}
+
+.academic__courses__item__title,
+.academic__courses__item__subtitle p{
+    text-align: center;
+    font-size: 1rem;
+    font-family: "Press Start 2P", system-ui;
 }
