--- a/assets/css/about.css
+++ b/assets/css/about.css
@@ -2,11 +2,14 @@
 
 .about {
     display: flex;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100vh;
     flex-wrap: wrap;
-    padding: 3rem;
+    padding: 5rem;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
     background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../images/programmer_about.jpeg");
 }
 
@@ -52,7 +55,6 @@
 }
 
 .about__media {
-    background-image: url("../images/blob.svg");
     width: 40%;
     background-repeat: no-repeat;
     background-position: center;
