--- a/assets/css/portafolio.css
+++ b/assets/css/portafolio.css
@@ -7,13 +7,18 @@
     flex-direction: column;
     width: 100%;
     height: 100dvh;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 100%;
+    background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../images/portafolio_fondo.jpeg");
+    background-size: cover;
 }
 
 .portafolio__title {
     text-align: center;
     font-size: 3em;
     font-family: "Press Start 2P", system-ui;
-    color: var(--color-text);
+    color: var(--bg-color);
 }
 
 .portafolio__container {
@@ -44,7 +49,7 @@
 .portafolio__card h3 {
     font-size: 1.5em;
     font-family: "Press Start 2P", system-ui;
-    color: var(--color-text);
+    color: var(--bg-color);
     margin-bottom: 1rem;
     flex-wrap: wrap;
     text-align: center;
@@ -93,6 +98,7 @@
 
 .btn__container {
     width: 100%;
+    padding: 0 2rem;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,11 +108,11 @@
 .card__btn {
     color: var(--bg-color);
     background-color: var(--second-color);
-    padding: 1rem;
+    padding: 1.5rem;
     border-radius: var(--border-radius);
     border: 1px solid var(--bg-color);
     font-size: 1rem;
-    width: 103px;
+    width: 135px;
     text-align: center;
     transition: .4s ease-in-out;
     font-family: "Press Start 2P", system-ui;
