--- a/assets/css/portafolio.css
+++ b/assets/css/portafolio.css
@@ -6,12 +6,13 @@
     justify-content: center;
     flex-direction: column;
     width: 100%;
-    height: 100dvh;
+    height: calc(100%);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
     background-image: linear-gradient(45deg, rgba(31, 31, 31, 0.7819502801120448) 62%, rgba(4, 13, 18, 1) 100%), url("../images/portafolio_fondo.jpeg");
     background-size: cover;
+    padding-top: 9rem;
 }
 
 .portafolio__title {
@@ -88,6 +89,7 @@
 
 .card__img {
     width: 100%;
+    height: 150px;
     transition: var(--transition);
     border-radius: 14px;
 }
