--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,6 +5,7 @@
     --text-color: hsl(0, 0%, 98%);
     --bg-color: hsl(0, 0%, 100%);
     --transition: 0.4s, background-color 0.2s ease-in-out;
+    --transition2: all 2s ease
     --primary-color: hsl(265, 96%, 43%);
     --border-radius: 2.5rem;
     --second-color: #fd8f44;
